# template

./: README.md  cookiecutter.json
.github/workflows/: test.yaml
hooks/: post_gen_project.py
{{ cookiecutter.plugin }}/: .flake8  .pre-commit-config.yaml  mypy.ini  pyproject.toml
{{ cookiecutter.plugin }}/.github/workflows/: test.yaml
{{ cookiecutter.plugin }}/scripts/: update.py
{{ cookiecutter.plugin }}/tests/: conftest.py
{{ cookiecutter.plugin }}/{{ cookiecutter.plugin.lower().replace('-','_') }}/: __init__.py  route.py
