[tool.poetry]
name = "{{ cookiecutter.plugin }}"
version = "0.1.0"

authors = ["{{ cookiecutter.username }} <{{ cookiecutter.email }}>"]
description = "{{ cookiecutter.description }}"
keywords = ["rss"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
rsserpent-rev = ">=0.1.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.15.0"
uvicorn = "^0.29.0"
# testing
[tool.poetry.group.tests.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.15.1"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.10.1"
pytest-xdist = "^2.3.0"
requests = "^2.26.0"

[tool.poetry.plugins."rsserpent.plugin"]
"{{ cookiecutter.plugin.removeprefix('rsserpent-plugin-') }}" = "{{ cookiecutter.plugin.lower().replace('-','_') }}:plugin"

[tool.coverage.run]
include = ["{{ cookiecutter.plugin.lower().replace('-','_') }}/*"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover"
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-builtin
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-datetimez
    "DTZ",
    # flake8-debugger
    "T10",
    # eradicate
    "ERA",
    # flake8-print
    "T20",
    # pep8-naming
    "N",
    # tryceratops
    "TRY",
    # pygrep-hooks
    "PGH",
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
docstring-code-format = true

[tool.nitpick]
style = "https://raw.githubusercontent.com/RSSerpent-Rev/RSSerpent/master/styles/main.toml"
cache = "1 day"

[tool.mypy]
plugins = ["pydantic.mypy"]
pretty = true
python_version = "3.10"
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = ["pyquery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["feedgen.*"]
ignore_errors = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
